--- a/Classification - Logistic Regression, Random Forest.ipynb
+++ b/Classification - Logistic Regression, Random Forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
        "[5 rows x 49 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "Name: default, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
        "Name: default, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
        "Text(0.5, 1.0, 'ROC Curve')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
        "0.7409098596313208"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
        "(0.7485868812548746, 0.032572155885326574)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,15 +799,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C': 1.0,\n",
+       " 'class_weight': None,\n",
+       " 'dual': False,\n",
+       " 'fit_intercept': True,\n",
+       " 'intercept_scaling': 1,\n",
+       " 'max_iter': 100,\n",
+       " 'multi_class': 'ovr',\n",
+       " 'n_jobs': 1,\n",
+       " 'penalty': 'l2',\n",
+       " 'random_state': None,\n",
+       " 'solver': 'liblinear',\n",
+       " 'tol': 0.0001,\n",
+       " 'verbose': 0,\n",
+       " 'warm_start': False}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "param_grid = {'C': np.linspace(0, 5, 100),\n",
-    "              'solver': ['newton-cg', 'lbfgs','sag'],\n",
-    "              \n",
-    "    \n",
-    "}"
+    "#checking the parameters that are available to tune for Logistic Regression\n",
+    "LogisticRegression().get_params()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parameters\n",
+    "----------\n",
+    "<b>penalty</b> : str, 'l1' or 'l2', default: 'l2'. Used to specify the norm used in the penalization. The 'newton-cg','sag' and 'lbfgs' solvers support only l2 penalties.<br>\n",
+    "<b>tol</b> : float, default: 1e-4. Tolerance for stopping criteria.<br>\n",
+    "<b>C</b> : float, default: 1.0. Inverse of regularization strength; must be a positive float.Like in support vector machines, smaller values specify stronger regularization. <br>\n",
+    "<b>fit_intercept</b>: bool, optional (default=True).Specifies if a constant (a.k.a. bias or intercept) should be added to the decision function.<br>\n",
+    "<b>solver</b> : str, {‘newton-cg’, ‘lbfgs’, ‘liblinear’, ‘sag’, ‘saga’}, optional (default=’lbfgs’)\n",
+    "        Algorithm to use in the optimization problem.\n",
+    "        For small datasets, ‘liblinear’ is a good choice, whereas ‘sag’ and ‘saga’ are faster for large ones.\n",
+    "        For multiclass problems, only ‘newton-cg’, ‘sag’, ‘saga’ and ‘lbfgs’ handle multinomial loss; ‘liblinear’ is limited to one-versus-rest schemes.\n",
+    "        ‘newton-cg’, ‘lbfgs’, ‘sag’ and ‘saga’ handle L2 or no penalty\n",
+    "        ‘liblinear’ and ‘saga’ also handle L1 penalty\n",
+    "        ‘saga’ also supports ‘elasticnet’ penalty\n",
+    "        ‘liblinear’ does not support setting penalty='none'<br>\n",
+    "<b>max_iter:</b>: int, optional (default=100). Maximum number of iterations taken for the solvers to converge.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 120 candidates, totalling 600 fits\n",
+      "Best estimator Params:  {'C': 0.021544346900318846, 'max_iter': 100, 'random_state': 100, 'solver': 'newton-cg'}\n",
+      "Best estimator Accuracy score for test set:  0.7566666666666667\n",
+      "Best estimator F1 score for test set:  0.8443496801705758\n",
+      "Wall time: 11 s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done 600 out of 600 | elapsed:   10.9s finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "param_grid = {'C': 10 ** np.linspace(-5, 5, 10),\n",
+    "              'solver': ['newton-cg', 'lbfgs','sag', 'liblinear'],\n",
+    "              'random_state': [100],\n",
+    "              'max_iter': [100,300,500]\n",
+    "}\n",
+    "gridsearch = GridSearchCV(estimator=lr, param_grid=param_grid, scoring=\"f1\", cv=5, verbose=True)\n",
+    "gridsearch.fit(X_train, y_train)\n",
+    "\n",
+    "best = gridsearch.best_estimator_\n",
+    "print(\"Best estimator Params: \",gridsearch.best_params_)\n",
+    "print(\"Best estimator Accuracy score for test set: \", best.score(X_test, y_test))\n",
+    "y_test_pred = gridsearch.predict(X_test)\n",
+    "print(\"Best estimator F1 score for test set: \", metrics.f1_score(y_test, y_test_pred))"
    ]
   },
   {
@@ -822,81 +905,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "LogisticRegression()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
-       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.        , 0.05050505, 0.1010101 , 0.15151515, 0.2020202 ,\n",
-       "       0.25252525, 0.3030303 , 0.35353535, 0.4040404 , 0.45454545,\n",
-       "       0.50505051, 0.55555556, 0.60606061, 0.65656566, 0.70707071,\n",
-       "       0.75757576, 0.80808081, 0.85858586, 0.90909091, 0.95959596,\n",
-       "       1.01010101, 1.06060606, 1.11111111, 1.16161616, 1.21212121,\n",
-       "       1.26262626, 1.31313131, 1.36363636, 1.41414141, 1.46464646,\n",
-       "       1.51515152, 1.56565657, 1.61616162, 1.66666667, 1.71717172,\n",
-       "       1.76767677, 1.81818182, 1.86868687, 1.91919192, 1.96969697,\n",
-       "       2.02020202, 2.07070707, 2.12121212, 2.17171717, 2.22222222,\n",
-       "       2.27272727, 2.32323232, 2.37373737, 2.42424242, 2.47474747,\n",
-       "       2.52525253, 2.57575758, 2.62626263, 2.67676768, 2.72727273,\n",
-       "       2.77777778, 2.82828283, 2.87878788, 2.92929293, 2.97979798,\n",
-       "       3.03030303, 3.08080808, 3.13131313, 3.18181818, 3.23232323,\n",
-       "       3.28282828, 3.33333333, 3.38383838, 3.43434343, 3.48484848,\n",
-       "       3.53535354, 3.58585859, 3.63636364, 3.68686869, 3.73737374,\n",
-       "       3.78787879, 3.83838384, 3.88888889, 3.93939394, 3.98989899,\n",
-       "       4.04040404, 4.09090909, 4.14141414, 4.19191919, 4.24242424,\n",
-       "       4.29292929, 4.34343434, 4.39393939, 4.44444444, 4.49494949,\n",
-       "       4.54545455, 4.5959596 , 4.64646465, 4.6969697 , 4.74747475,\n",
-       "       4.7979798 , 4.84848485, 4.8989899 , 4.94949495, 5.        ])"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.linspace(0, 5, 100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "penalty='l2', dual=False, tol=0.0001, C=1.0, fit_intercept=True, intercept_scaling=1, class_weight=None, \n",
-    "random_state=None, solver='liblinear', max_iter=100, multi_class='ovr', verbose=0, warm_start=False, n_jobs=1"
-   ]
+   "source": []
   }
  ],
  "metadata": {
